--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /gpt2_probing/results
 .DS_Store
 /gpt2_probing/people_dataset_prepared_most_popular.csv.zip
+/gpt2_probing/people_dataset_prepared_most_popular.csv
